tests/fixtures/errors/postprocess/variants/return-undefined/postprocess.js
export default () => {
  process.stderr.write("Stderr!");
};
